--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,11 +21,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+        run: |
+          echo "${{ secrets.DOCKERHUB_AUTH }}" | docker login \
+            -u $(echo "${{ secrets.DOCKERHUB_AUTH }}" | cut -d: -f1) \
+            --password-stdin
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
